--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+skills/claude-code-bridge/CACHEDIR.TAG
+skills/claude-code-bridge/pyvenv.cfg
